--- a/pom.xml
+++ b/pom.xml
@@ -7,26 +7,35 @@
 	<properties>
 		<version.mockito_all>1.9.5</version.mockito_all>
 		<version.arquillian>1.1.2.Final</version.arquillian>
+		<version.arquillian-weld-ee>1.1.2.AS7</version.arquillian-weld-ee>
+		<version.junit>4.10</version.junit>
+		<version.javaee6.spec>3.0.2.Final</version.javaee6.spec>
 	</properties>
 
 	<dependencyManagement>
 		<dependencies>
+
+
+			<dependency>
+				<groupId>org.jboss.arquillian</groupId>
+				<artifactId>arquillian-bom</artifactId>
+				<version>${version.arquillian}</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>
+
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-all</artifactId>
 				<version>${version.mockito_all}</version>
 			</dependency>
-			<dependency>
-				<groupId>org.jboss.arquillian.test</groupId>
-				<artifactId>arquillian-test-spi</artifactId>
-				<version>${version.arquillian}</version>
-			</dependency>
 
 			<dependency>
-				<groupId>org.jboss.arquillian.container</groupId>
-				<artifactId>arquillian-container-test-spi</artifactId>
-				<version>${version.arquillian}</version>
+				<groupId>org.jboss.weld.arquillian.container</groupId>
+				<artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
+				<version>${version.arquillian-weld-ee}</version>
 			</dependency>
+
 
 			<dependency>
 				<groupId>javax.enterprise</groupId>
@@ -34,7 +43,16 @@
 				<version>1.0</version>
 				<scope>provided</scope>
 			</dependency>
+
+
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>${version.junit}</version>
+				<scope>test</scope>
+			</dependency>
 		</dependencies>
+
 	</dependencyManagement>
 
 
@@ -54,25 +72,89 @@
 			<artifactId>arquillian-test-spi</artifactId>
 
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 
 		<dependency>
-			<groupId>org.jboss.arquillian.container</groupId>
-			<artifactId>arquillian-container-test-spi</artifactId>
-
+			<groupId>org.jboss.arquillian.junit</groupId>
+			<artifactId>arquillian-junit-container</artifactId>
+			<scope>test</scope>
 		</dependency>
+
+
 	</dependencies>
-	
+
 	<build>
-	<plugins>
-		<plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-                <source>1.6</source>
-                <target>1.6</target>
-            </configuration>
-        </plugin>
-	
-	</plugins>
-	
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+
+		</plugins>
+
 	</build>
+
+
+	<profiles>
+		<profile>
+			<!-- The default profile skips all tests, though you can tune it to run 
+				just unit tests based on a custom pattern -->
+			<!-- Seperate profiles are provided for running all tests, including Arquillian 
+				tests that execute in the specified container -->
+			<id>default</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<skip>true</skip>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>arquillian-weld-ee-embedded</id>
+			<dependencies>
+				<dependency>
+					<groupId>org.jboss.weld.arquillian.container</groupId>
+					<artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
+					<scope>test</scope>
+				</dependency>
+				
+				 <dependency>
+                    <groupId>org.jboss.spec</groupId>
+                    <artifactId>jboss-javaee-6.0</artifactId>
+                    <version>1.0.0.Final</version>
+                    <type>pom</type>
+                    <scope>provided</scope>
+                </dependency>
+        
+                <dependency>
+                    <groupId>org.jboss.weld</groupId>
+                    <artifactId>weld-core</artifactId>
+                    <version>1.1.9.Final</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-simple</artifactId>
+                    <version>1.6.4</version>
+                    <scope>test</scope>
+                </dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
