--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,11 @@
 		<version.mockito_all>1.9.5</version.mockito_all>
 		<version.arquillian>1.1.3.Final</version.arquillian>
 		<version.arquillian-weld-ee>1.1.2.Final</version.arquillian-weld-ee>
-		<version.junit>4.8.1</version.junit>
-		<version.javaee6.spec>3.0.2.Final</version.javaee6.spec>
+		<version.junit>4.10</version.junit>
+		<version.weld_servlet>1.1.8.Final</version.weld_servlet>
+		<version.org.apache.tomcat>7.0.32</version.org.apache.tomcat>
+		<version.shrinkwrap-resolver>2.0.1</version.shrinkwrap-resolver>
+		<version.cdi-api>1.0</version.cdi-api>
 	</properties>
 
 	<dependencyManagement>
@@ -23,7 +26,13 @@
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
-
+			<dependency>
+				<groupId>org.jboss.shrinkwrap.resolver</groupId>
+				<artifactId>shrinkwrap-resolver-bom</artifactId>
+				<version>${version.shrinkwrap-resolver}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-all</artifactId>
@@ -40,7 +49,7 @@
 			<dependency>
 				<groupId>javax.enterprise</groupId>
 				<artifactId>cdi-api</artifactId>
-				<version>1.0</version>
+				<version>${version.cdi-api}</version>
 				<scope>provided</scope>
 			</dependency>
 
@@ -51,6 +60,7 @@
 				<version>${version.junit}</version>
 				<scope>test</scope>
 			</dependency>
+
 		</dependencies>
 
 	</dependencyManagement>
@@ -64,14 +74,13 @@
 		<dependency>
 			<groupId>javax.enterprise</groupId>
 			<artifactId>cdi-api</artifactId>
-			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.arquillian.test</groupId>
 			<artifactId>arquillian-test-spi</artifactId>
-
 		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -85,7 +94,17 @@
 			<scope>test</scope>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.jboss.shrinkwrap.resolver</groupId>
+			<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.jboss.shrinkwrap.resolver</groupId>
+			<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -126,32 +145,39 @@
 		</profile>
 
 		<profile>
-			<id>weld-ee-embedded-1.1</id>
+			<id>tomcat-embedded-7</id>
 			<dependencies>
 				<dependency>
 					<groupId>org.jboss.arquillian.container</groupId>
-					<artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
-					<version>1.0.0.CR8</version>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.jboss.weld</groupId>
-					<artifactId>weld-core</artifactId>
-					<version>1.1.8.Final</version>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.slf4j</groupId>
-					<artifactId>slf4j-simple</artifactId>
-					<version>1.6.4</version>
+					<artifactId>arquillian-tomcat-embedded-7</artifactId>
+					<version>1.0.0.CR6</version>
 					<scope>test</scope>
 				</dependency>
 
 				<dependency>
-					<groupId>org.jboss.spec</groupId>
-					<artifactId>jboss-javaee-6.0</artifactId>
-					<version>1.0.0.Final</version>
-					<type>pom</type>
+					<groupId>org.jboss.weld.servlet</groupId>
+					<artifactId>weld-servlet</artifactId>
+					<version>2.1.0.Final</version>
+					<scope>test</scope>
+				</dependency>
+		
+
+				<dependency>
+					<groupId>org.apache.tomcat.embed</groupId>
+					<artifactId>tomcat-embed-core</artifactId>
+					<version>${version.org.apache.tomcat}</version>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.tomcat.embed</groupId>
+					<artifactId>tomcat-embed-jasper</artifactId>
+					<version>${version.org.apache.tomcat}</version>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.tomcat.embed</groupId>
+					<artifactId>tomcat-embed-logging-juli</artifactId>
+					<version>${version.org.apache.tomcat}</version>
 					<scope>provided</scope>
 				</dependency>
 			</dependencies>
