--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,91 @@
+<?xml version="1.0" encoding="UTF-8" ?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+	<!-- Parent -->
+	<parent>
+		<groupId>org.jboss</groupId>
+		<artifactId>jboss-parent</artifactId>
+		<version>12</version>
+		<relativePath />
+	</parent>
+
+	<!-- Model Version -->
 	<modelVersion>4.0.0</modelVersion>
+
+	<!-- Artifact Configuration -->
 	<groupId>org.jboss.arquillian.extension</groupId>
-	<artifactId>arquillian-mockito</artifactId>
+	<artifactId>arquillian-mockito-parent</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
+	<packaging>pom</packaging>
+
+	<name>Arquillian Mockito: Parent</name>
+	<description>Integrate Mockito with Arquillian in CDI environment</description>
+
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<name>Gong Yi</name>
+			<email>topikachu@163.com</email>
+		</developer>
+	</developers>
+
+
+
+	<scm>
+		<connection>scm:git:git://git@github.com:topikachu/arquillian-extension-mockito.git</connection>
+		<developerConnection>scm:git:ssh://github.com/topikachu/arquillian-extension-mockito.git</developerConnection>
+		<url>git://github.com/topikachu/arquillian-extension-mockito.git</url>
+		<tag>HEAD</tag>
+	</scm>
+
+
+
 	<properties>
+		<!-- Arquillian -->
 		<version.mockito_all>1.9.5</version.mockito_all>
 		<version.arquillian>1.1.3.Final</version.arquillian>
-		<version.arquillian-weld-ee>1.1.2.Final</version.arquillian-weld-ee>
+		<version.cdi-api>1.0</version.cdi-api>
+
+		<!-- Tests -->
 		<version.junit>4.10</version.junit>
+		<version.hamcrest>1.1</version.hamcrest>
+		<version.mockito>1.9.0</version.mockito>
+		<version.shrinkwrap_resolver>2.0.0</version.shrinkwrap_resolver>
 		<version.weld_servlet>1.1.8.Final</version.weld_servlet>
 		<version.org.apache.tomcat>7.0.32</version.org.apache.tomcat>
 		<version.shrinkwrap-resolver>2.0.1</version.shrinkwrap-resolver>
-		<version.cdi-api>1.0</version.cdi-api>
+
+		<!-- Container Versions -->
+
+		<version.tomcat7>7.0.26</version.tomcat7>
+
+
+		<!-- override from parent -->
+		<maven.compiler.argument.target>1.5</maven.compiler.argument.target>
+		<maven.compiler.argument.source>1.5</maven.compiler.argument.source>
 	</properties>
+
+	<modules>
+		<!-- build modules -->
+
+
+		<!-- main modules -->
+		<module>impl</module>
+		<module>ftest</module>
+
+
+	</modules>
+
 
 	<dependencyManagement>
 		<dependencies>
-
-
 			<dependency>
 				<groupId>org.jboss.arquillian</groupId>
 				<artifactId>arquillian-bom</artifactId>
@@ -40,19 +107,11 @@
 			</dependency>
 
 			<dependency>
-				<groupId>org.jboss.weld.arquillian.container</groupId>
-				<artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
-				<version>${version.arquillian-weld-ee}</version>
-			</dependency>
-
-
-			<dependency>
 				<groupId>javax.enterprise</groupId>
 				<artifactId>cdi-api</artifactId>
 				<version>${version.cdi-api}</version>
 				<scope>provided</scope>
 			</dependency>
-
 
 			<dependency>
 				<groupId>junit</groupId>
@@ -60,128 +119,25 @@
 				<version>${version.junit}</version>
 				<scope>test</scope>
 			</dependency>
-
+			<dependency>
+				<groupId>org.jboss.arquillian.extension</groupId>
+				<artifactId>arquillian-mockito</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 		</dependencies>
 
 	</dependencyManagement>
-
-
-	<dependencies>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>javax.enterprise</groupId>
-			<artifactId>cdi-api</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jboss.arquillian.test</groupId>
-			<artifactId>arquillian-test-spi</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
-
-
-		<dependency>
-			<groupId>org.jboss.arquillian.junit</groupId>
-			<artifactId>arquillian-junit-container</artifactId>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jboss.shrinkwrap.resolver</groupId>
-			<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
-			<scope>test</scope>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.jboss.shrinkwrap.resolver</groupId>
-			<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
+				<artifactId>maven-release-plugin</artifactId>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+					<pushChanges>false</pushChanges>
+					<localCheckout>true</localCheckout>
 				</configuration>
 			</plugin>
-
 		</plugins>
-
 	</build>
 
-
-	<profiles>
-		<profile>
-			<!-- The default profile skips all tests, though you can tune it to run 
-				just unit tests based on a custom pattern -->
-			<!-- Seperate profiles are provided for running all tests, including Arquillian 
-				tests that execute in the specified container -->
-			<id>default</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<skip>true</skip>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>tomcat-embedded-7</id>
-			<dependencies>
-				<dependency>
-					<groupId>org.jboss.arquillian.container</groupId>
-					<artifactId>arquillian-tomcat-embedded-7</artifactId>
-					<version>1.0.0.CR6</version>
-					<scope>test</scope>
-				</dependency>
-
-				<dependency>
-					<groupId>org.jboss.weld.servlet</groupId>
-					<artifactId>weld-servlet</artifactId>
-					<version>2.1.0.Final</version>
-					<scope>test</scope>
-				</dependency>
-		
-
-				<dependency>
-					<groupId>org.apache.tomcat.embed</groupId>
-					<artifactId>tomcat-embed-core</artifactId>
-					<version>${version.org.apache.tomcat}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.apache.tomcat.embed</groupId>
-					<artifactId>tomcat-embed-jasper</artifactId>
-					<version>${version.org.apache.tomcat}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.apache.tomcat.embed</groupId>
-					<artifactId>tomcat-embed-logging-juli</artifactId>
-					<version>${version.org.apache.tomcat}</version>
-					<scope>provided</scope>
-				</dependency>
-			</dependencies>
-
-		</profile>
-	</profiles>
 </project>
