--- a/ftest/pom.xml
+++ b/ftest/pom.xml
@@ -7,7 +7,7 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>arquillian-mockito-ftest</artifactId>
-	
+
 
 
 
@@ -81,16 +81,17 @@
 				<dependency>
 					<groupId>org.jboss.arquillian.container</groupId>
 					<artifactId>arquillian-tomcat-embedded-7</artifactId>
-					<version>1.0.0.CR6</version>
+					<version>${version.arquillian-tomcat-embedded-7}</version>
 					<scope>test</scope>
 				</dependency>
 
 				<dependency>
 					<groupId>org.jboss.weld.servlet</groupId>
 					<artifactId>weld-servlet</artifactId>
-					<version>2.1.0.Final</version>
+					<version>${version.weld_servlet}</version>
 					<scope>test</scope>
 				</dependency>
+
 
 
 				<dependency>
