--- a/pom.xml
+++ b/pom.xml
@@ -52,19 +52,19 @@
 		<version.mockito_all>1.9.5</version.mockito_all>
 		<version.arquillian>1.1.3.Final</version.arquillian>
 		<version.cdi-api>1.0</version.cdi-api>
-
+		
 		<!-- Tests -->
 		<version.junit>4.10</version.junit>
 		<version.hamcrest>1.1</version.hamcrest>
 		<version.mockito>1.9.0</version.mockito>
 		<version.shrinkwrap_resolver>2.0.0</version.shrinkwrap_resolver>
 		<version.weld_servlet>1.1.8.Final</version.weld_servlet>
-		<version.org.apache.tomcat>7.0.32</version.org.apache.tomcat>
+		<version.arquillian-tomcat-embedded-7>1.0.0.CR6</version.arquillian-tomcat-embedded-7>
 		<version.shrinkwrap-resolver>2.0.1</version.shrinkwrap-resolver>
 
 		<!-- Container Versions -->
-
-		<version.tomcat7>7.0.26</version.tomcat7>
+		<version.org.apache.tomcat>7.0.32</version.org.apache.tomcat>
+		
 
 
 		<!-- override from parent -->
